[project]
name = "vision-based-automation"
version = "0.1.0"
description = "Desktop automation using Computer Vision and BotCity"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "botcity-framework-core",
    "opencv-python",
    "pillow",
    "pytesseract",
    "requests",
    "numpy",
    "pypiwin32",
    "pyautogui",
    "pynput",
    "pyperclip"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

